Completed basic benchmark functionality

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,9 +19,12 @@ flume = { version = "0.10" }
 thiserror = "1"
 comfy-table = "5.0.1"
 parse_duration = "2.1.1"
+async-compression = { version = "0.3.14", features = ["tokio", "zstd"] }
+# console-subscriber = "0"
+
 
 [target.'cfg(unix)'.dependencies]
 libc = { version = "0.2" }
 
 [profile.release]
-lto = true
+# lto = true
