--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "3", features = ["derive"] }
-tokio = { version = "1.18", features = ["rt-multi-thread", "io-util", "macros", "net", "sync", "time", "fs"] }
+tokio = { version = "1.19.2", features = ["rt-multi-thread", "io-util", "macros", "net", "sync", "time", "fs", "tracing"] }
 serde = { version = "1", features = ["derive"] }
 chashmap = "2"
 lazy_static = "1"
@@ -20,7 +20,7 @@ thiserror = "1"
 comfy-table = "5.0.1"
 parse_duration = "2.1.1"
 async-compression = { version = "0.3.14", features = ["tokio", "zstd"] }
-# console-subscriber = "0"
+console-subscriber = "0"
 
 
 [target.'cfg(unix)'.dependencies]
